<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_blue_light">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/start_scan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start_scan" />

        <Button
            android:id="@+id/scan_fail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/scan_fail" />

        <Button
            android:id="@+id/scan_ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/scan_ok" />

        <Button
            android:id="@+id/scan_pause"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pause" />
    </LinearLayout>

    <com.example.demoCollection.animation.EyeGrainUnlockView
        android:id="@+id/eguv"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_centerInParent="true" />

</RelativeLayout>
