<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:leui="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/le_licence_dialog_top_round_rect_shape"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="16dp"
        android:paddingRight="16dp">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingTop="18dp"
            android:paddingBottom="18dp"
            android:gravity="center"
            android:text="@string/le_licence_dialog_title"
            android:textColor="@android:color/black"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_licence_content"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:lineSpacingExtra="6sp"
            android:gravity="center"
            android:textColor="@color/le_licence_dialog_content_text_color"
            android:textColorLink="@color/le_licence_dialog_text_blue_color"
            android:textSize="14sp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="18dp"
            android:paddingBottom="18dp"
            android:id="@+id/cb_prompt_wrapper">

            <com.example.demoCollection.widget.leCheckBox.LeCheckBox
                android:id="@+id/cb_prompt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:checked="true"
                android:gravity="center"
                android:text="@string/le_licence_dialog_cb_text"
                android:textColor="@color/le_licence_dialog_cb_text_color"
                android:textSize="14sp"
                android:textStyle="normal"
                leui:leBoxInnerPadding="5dp"
                leui:leBoxOnColor="@color/le_color_default_checkbox_track_on" />
        </LinearLayout>
    </LinearLayout>

    <View
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:layout_width="fill_parent"
        android:layout_height="1px"
        android:background="@color/le_licence_dialog_divider_color" />

    <Button
        android:id="@+id/btn_agree"
        android:paddingTop="14dp"
        android:paddingBottom="14dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="?android:attr/selectableItemBackground"
        android:text="@string/le_licence_dialog_btn_agree"
        android:textColor="@color/le_licence_dialog_text_blue_color"
        android:textSize="18sp" />

    <View
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:layout_width="fill_parent"
        android:layout_height="1px"
        android:background="@color/le_licence_dialog_divider_color" />

    <Button
        android:id="@+id/btn_cancel"
        android:paddingTop="14dp"
        android:paddingBottom="14dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="?android:attr/selectableItemBackground"
        android:text="@string/le_licence_dialog_btn_exit"
        android:textColor="@android:color/black"
        android:textSize="18sp" />

</LinearLayout>
